Fix Tweaked meta description and height for cards section on mobile

--- a/src/pages/Home/components/ValuesSection/ValuesSection.css
+++ b/src/pages/Home/components/ValuesSection/ValuesSection.css
@@ -30,6 +30,10 @@
 }
 
 @media screen and (max-width: 1200px) {
+  .horizontalSlider {
+    height: auto;
+  }
+
   .valuesSection__fullWidthBox {
     display: flex;
     flex-direction: column;
